@@ -4,18 +4,16 @@
 
 * parameter bounds:
    new syntax - %f = Linear(~3[2:5], ~10)
-   new syntax - $b = copy($a) - copy with domain
-   keep domain when assigning a value ($a={$a}, $a=~20.1, but also $a=$c)
    new syntax - domain in default parameters (...shape=~0.5 [0:1],...),
    adjust definitions of Voigt, PseudoVoigt, Pearson7
-   tests for domains
 
 * tests: fitting with constraints
 
 * API: add all_datasets(): for n, title in F:all_datasets() do ...
-* API: access to confidence intervals
 
 ----  1.3.0
+
+* API: access to confidence intervals
 
 * GUI: Tools > Macros
 
