@@ -55,7 +55,7 @@ private:
     void command_resize_p(const std::vector<Token>& args, int ds);
     void command_assign_param(const std::vector<Token>& args, int ds);
     void command_assign_all(const std::vector<Token>& args, int ds);
-    void command_name_var(const std::vector<Token>& args);
+    void command_name_var(const std::vector<Token>& args, int ds);
     void command_change_model(const std::vector<Token>& args, int ds);
     void recalculate_command(Command& c, int ds, Statement& st);
     int make_func_from_template(const std::string& name,
